square/tester.cpp.g++log.txt
C:\Users\Мария\Desktop\square\tester.cpp:4:1: error: expected initializer before 'void'
 void auto_test()
 ^
---------------------------------------------------------------------------------------------
[23.08.2024 18:42:13,16 C:\Users\Мария@LAPTOP-4LLO6J97, returned 1]
C:\Users\Мария\Desktop\square>g++.exe "C:\Users\Мария\Desktop\square\tester.cpp" -o C:\Users\Мария\Desktop\square\tester.exe  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
